<resources>
    <string name="app_name">Smart Lock</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="preencha_campo">Preencha o campo</string>
    <string name="formato_email">O formato do email digitado está incorreto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="smartlock">Smart Lock</string>
    <string name="cadastrar_usuario">Cadastrar usuário</string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="senha">Senha (min. 7 caracteres)</string>
    <string name="idade">Data de Nascimento</string>
    <string name="cpf">CPF</string>
    <string name="telefone">Telefone</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="ir_ate_la">Ir até lá</string>
    <string name="alugar_armario">Alugar Armário</string>
    <string name="entre_ou_crie_sua_conta">Entre ou crie sua conta</string>
    <string name="recuperar_senha">Recuperar senha</string>
    <string name="entrar">Entrar</string>
    <string name="consultar_armarios">Consultar Armários</string>
    <string name="recuperar">Recuperar</string>
    <string name="adicionar_cartao">Adicionar Cartão</string>
    <string name="nome_do_titular">Nome do Titular</string>
    <string name="numero_do_cartao">Número do Cartão</string>
    <string name="cvv">CVV</string>
    <string name="ano_de_validade">Ano de Validade</string>
    <string name="adicionar">Adicionar</string>
    <string name="voce_nao_possui_nenhuma_locacao_aberta">Você não possui nenhuma locação aberta</string>
    <string name="escolha_o_tempo_que_ira_usar_o_armario">Escolha o tempo que irá usar o armário</string>
    <string name="confirmar_locacao">Confirmar locação</string>
    <string name="nome_do_usuario">Nome do usuário</string>
    <string name="email_do_usuario">Email do usuário</string>
    <string name="cartao_cadastrado">Cartão Cadastrado:</string>
    <string name="nenhum_cartao_cadastrado">Nenhum cartão cadastrado...</string>
    <string name="sair">Sair</string>
    <string name="apresente_esse_qr_code_ao_gerente_nomegerente">Apresente esse QR Code ao gerente</string>
    <string name="concluir">Concluir</string>
    <string name="perfil">Perfil</string>
    <string name="mapa">Mapa</string>
    <string name="locacao">Locação</string>
    <string name="nenhuma_locacao_aberta">Nenhuma locação aberta...</string>
    <string name="todo">TODO</string>
    <string name="ler_nfc">Ler NFC</string>
    <string name="leia_a_nfc_do_cliente_para_que_ele_possa_abrir_o_arm_rio_novamente">Leia a NFC do cliente para que ele possa abrir o armário novamente</string>
    <string name="acessar_arm_rio">Acessar Armário</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="crie_sua_conta_para_continuar">Crie sua conta para continuar</string>
    <string name="data_de_nascimento">Data de Nascimento</string>
    <string name="dia">Dia</string>
    <string name="barra">/</string>
    <string name="m_s">Mês</string>
    <string name="ano">Ano</string>
    <string name="limpar_nfc">Limpar NFC</string>
    <string name="leia_a_nfc_do_cliente_para_que_ela_possa_ser_limpa_removendo_os_dados_salvos">Leia a NFC do cliente para que ela possa ser limpa, removendo os dados salvos</string>
    <string name="finalizar_loca_o">Finalizar Locação</string>
    <string name="confirme_o_cliente">Confirme o cliente</string>
    <string name="verifique_se_a_pessoa_na_foto_o_cliente_que_deseja_abrir_o_arm_rio">Verifique se a pessoa na foto é o cliente que deseja abrir o armário</string>
    <string name="proseguir">Proseguir</string>
    <string name="alugar">Alugar</string>
    <string name="arm_rio_efetivado">Armário efetivado</string>
    <string name="foi_efetivada_a_loca_o_do_arm_rio_e_est_pronto_para_uso">Foi efetivada a locação do armário e está pronto para uso</string>
    <string name="escolha_uma_op_o">Escolha uma opção</string>
    <string name="escolha_qual_op_o_o_cliente_deseja_que_seja_realizada">Escolha qual opção o cliente deseja que seja realizada</string>
    <string name="abrir_momentaneamente">Abrir momentaneamente</string>
    <string name="encerrar_loca_o">Encerrar Locação</string>
    <string name="bem_vindo">Bem-vindo!</string>
    <string name="voc_pode_consultar_os_arm_rios_dispon_veis_ou_entrar_e_come_ar_a_alugar">Você pode consultar os armários disponíveis ou entrar e começar a alugar</string>
    <string name="gerente">Gerente</string>
    <string name="libere_loca_es_ou_o_acesso_do_arm_rio">Libere locações ou o acesso do armário</string>
    <string name="liberar_loca_o">Liberar Locação</string>
    <string name="quantas_pessoas_acessar_o_este_arm_rio">Quantas pessoas acessarão este armário?</string>
    <string name="uma_pessoa">Uma pessoa</string>
    <string name="duas_pessoas">Duas pessoas</string>
    <string name="confirmar">Confirmar</string>
    <string name="insira_o_e_mail_associado_com_sua_conta_e_enviaremos_um_e_mail_para_voc_recuperar_sua_senha">Insira o e-mail associado com sua conta e enviaremos um e-mail para você recuperar sua senha</string>
    <string name="foto_do_cliente">Foto do cliente</string>
    <string name="fotografe_o_cliente_em_um_ambiente_iluminado">Fotografe o cliente em um ambiente iluminado</string>
    <string name="tirar_foto">Tirar Foto</string>
    <string name="vincular_nfc">Vincular NFC</string>
    <string name="escolha_uma_nfc_para_ser_vinculado_essa_loca_o_ao_aproximar_a_nfc_ser_vinculada_automaticamente">Escolha uma NFC para ser vinculado à essa locação, ao aproximar a NFC, será vinculada automaticamente</string>
    <string name="finalizar">Finalizar</string>
    <string name="adicionar_usu_rio">Adicionar Usuário</string>
    <string name="adicionar_cart_o">Adicionar cartão</string>
    <string name="todas_as_vezes_que_for_realizada_uma_loca_o_ser_cobrado_um_cau_o_de_uma_di_ria_e_estornada_proporcionalmente_de_acordo_com_o_per_odo_utilizado">Todas as vezes que for realizada uma locação, será cobrado um caução de uma diária e estornada proporcionalmente de acordo com o período utilizado</string>
    <string name="validade_do_cart_o">Validade do cartão</string>
    <string name="nenhuma_loca_o_n_o_efetivada">Nenhuma locação não efetivada</string>
    <string name="caso_voc_tiver_uma_loca_o_que_ainda_n_o_foi_efetivada_aqui_voc_ter_acesso_ao_qr_code_respectivo">Caso você tiver uma locação que ainda não foi efetivada, aqui você terá acesso ao QR Code respectivo</string>
    <string name="cancelar_loca_o">Cancelar Locação</string>
    <string name="escolha_o_tempo">Escolha o tempo</string>
    <string name="aqui_voc_precisa_escolher_o_plano_que_melhor_te_atenda">Aqui você precisa escolher o plano que melhor te atenda</string>
    <string name="qr_code">QR Code</string>
    <string name="apresente_esse_qr_code_para_o_gerente_para_que_ele_possa_efetivar_sua_loca_o">Apresente esse QR Code para o gerente (...) para que ele possa efetivar sua locação</string>
</resources>