<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_white"
    >

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main"
        tools:context=".ManagerActivities.WriteUserActivity"
        android:orientation="vertical"
        android:gravity="center">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_white">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btnBack"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/baseline_arrow_back_24" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/vincular_nfc"
            android:textColor="@color/main_dark_blue"
            android:textSize="30sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/escolha_uma_nfc_para_ser_vinculado_essa_loca_o_ao_aproximar_a_nfc_ser_vinculada_automaticamente"
            android:textAlignment="center"
            android:textColor="@color/main_light_blue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:layout_marginTop="25dp"
            android:id="@+id/userPhoto"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="50dp"
            android:gravity="center">

            <Button
                android:id="@+id/btnFim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/main_dark_blue"
                android:paddingHorizontal="30dp"
                android:text="@string/finalizar"
                android:textColor="@color/white"
                android:visibility="gone"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnMais"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:backgroundTint="@color/main_dark_blue"
                android:text="@string/adicionar_usu_rio"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>