<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_white">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ManagerActivities.UserPhotoActivity"
        android:id="@+id/main"
        android:orientation="vertical"
        android:gravity="center">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_white">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btnBack"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/baseline_arrow_back_24" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/foto_do_cliente"
            android:textColor="@color/main_dark_blue"
            android:textSize="30sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/fotografe_o_cliente_em_um_ambiente_iluminado"
            android:textAlignment="center"
            android:textColor="@color/main_light_blue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.camera.view.PreviewView
            android:id="@+id/cameraPreview"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:layout_marginTop="25dp"/>


        <Button
            android:id="@+id/btnFoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/main_dark_blue"
            android:paddingHorizontal="30dp"
            android:text="@string/tirar_foto"
            android:layout_marginVertical="75dp"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold" />





    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>