<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_white">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:id="@+id/main"
        android:layout_height="wrap_content"
        tools:context=".ManagerActivities.AccessLockerActivity"
        android:orientation="vertical"
        android:gravity="center">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_white">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btnBack"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/baseline_arrow_back_24" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/ler_nfc"
            android:textColor="@color/main_dark_blue"
            android:textSize="30sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/leia_a_nfc_do_cliente_para_que_ele_possa_abrir_o_arm_rio_novamente"
            android:textAlignment="center"
            android:textColor="@color/main_light_blue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/nfc_icon"
            />

        <Button
            android:id="@+id/btnAcessar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acessar_arm_rio"
            android:visibility="gone"
            android:textStyle="bold"
            android:textSize="17sp"
            android:layout_marginVertical="75dp"
            android:paddingHorizontal="30dp"
            android:backgroundTint="@color/main_dark_blue"
            android:textColor="@color/main_white"/>




    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>