<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:background="@color/main_white"
    android:layout_width="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
<<<<<<< HEAD
        android:background="@color/main_dark_blue"
        tools:context=".Fragments.AddCard">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
=======
        tools:context=".Fragments.AddCard"
        android:background="@color/main_dark_blue">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_dark_blue">
>>>>>>> Vinícius

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btnBack"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/baseline_arrow_back_24_white" />
<<<<<<< HEAD
=======

        </androidx.appcompat.widget.LinearLayoutCompat>



>>>>>>> Vinícius

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
<<<<<<< HEAD
            android:layout_marginTop="30dp"
            android:text="Adicionar cartão"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:text="Todas as vezes que for realizada uma
locação, será cobrado um caução de uma
 diária e estornada proporcionalmente de
acordo com o período utilizado"
            android:textAlignment="center"
            android:textColor="@color/main_light_blue"
            android:textSize="20sp"
            android:textStyle="bold" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_llc"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="50dp">
=======
            android:layout_marginTop="15dp"
            android:text="@string/adicionar_cartao"
            android:textColor="@color/main_white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:text="Todas as vezes que for realizada uma locação, será cobrada o caução de uma diária e estornada proporcionalmente
de acordo com o período utilizado."
            android:textColor="@color/main_light_blue"
            android:textSize="20sp"
            android:textAlignment="center"
            android:paddingHorizontal="10dp"
            android:textStyle="bold" />
>>>>>>> Vinícius

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_llc"
        android:orientation="vertical"
        android:layout_marginTop="40dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlNomeTitular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome_do_titular"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/baseline_perm_identity_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNomeTitular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:maxLength="25"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlNumeroCartao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/numero_do_cartao"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/baseline_numbers_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNumeroCartao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="16"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Validade do cartão"
            android:layout_marginTop="10dp"
            android:textColor="@color/main_dark_blue"
            android:textSize="15sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlDataMes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Mês"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/baseline_calendar_month_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDataMes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="2"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="/"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginHorizontal="10dp"
                android:textColor="@color/main_dark_blue"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlDataAno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Ano"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/baseline_calendar_month_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDataAno"
                    android:layout_width="match_parent"
                    android:inputType="number"
                    android:maxLength="2"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlCVV"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:hint="@string/cvv"
            android:layout_marginTop="10dp"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/baseline_vpn_key_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCVV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="3"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnAdicionar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
<<<<<<< HEAD
            android:layout_marginVertical="50dp"
            android:paddingHorizontal="30dp"
            android:text="@string/adicionar"
            android:backgroundTint="@color/main_dark_blue"
            android:textColor="@color/main_white"
=======
            android:layout_marginVertical="75dp"
            android:paddingHorizontal="30dp"
            android:text="@string/adicionar"
            android:textColor="@color/main_white"
            android:backgroundTint="@color/main_dark_blue"
>>>>>>> Vinícius
            android:textSize="17sp"
            android:textStyle="bold" />


    </androidx.appcompat.widget.LinearLayoutCompat>



    </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>